User management Api commit